--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -12,7 +12,7 @@
 
 .app-title {
     font-size: 32px;
-    color: #ff8c00;
+    color: #000000;
     /* 주황색 텍스트 (디자인에 따라 조정 가능) */
     margin-bottom: 69px;
 }
